--- a/css/styles.css
+++ b/css/styles.css
@@ -173,32 +173,20 @@ a.custom-card:hover {
   border-radius: 1px;
 }
 
-#username{
-  border: 1px solid;
-  border-radius: 5px;
-  border-color: white;
-  padding: 0 7px 0 7px;
-}
-
-#username:hover{
-  background-color: white;
-  color: rgb(14, 13, 13);
-  transition: 0.3s
-}
 
 .nav-item{
   padding: 0 7px 0 7px;
   text-decoration: none;
 }
 
-.nav-item:hover{
+/*.nav-item:hover{
   background-color: white;
   color: rgb(14, 13, 13);
   padding: 0 7px 0 7px;
   text-decoration: none;
   border-radius: 5px;
   transition: 0.3s;
-}
+}*/
 
 
 
@@ -365,4 +353,49 @@ input:focus {
 }
 
 
+.foto-perfil {
+    max-width: 200px;
+    max-height: 200px;
+    display: block;
+}
 
+.file-upload {
+    display: none;
+}
+.circle {
+    border-radius: 1000px !important;
+    overflow: hidden;
+    width: 128px;
+    height: 128px;
+    border: 8px solid rgba(255, 255, 255, 0.7);
+    position: absolute;
+    top: 72px;
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
+.p-image {
+  position: absolute;
+  top: 167px;
+  right: 30px;
+  color: #666666;
+  transition: all .3s cubic-bezier(.175, .885, .32, 1.275);
+}
+.p-image:hover {
+  transition: all .3s cubic-bezier(.175, .885, .32, 1.275);
+}
+.upload-button {
+  font-size: 1.2em;
+}
+
+.upload-button:hover {
+  transition: all .3s cubic-bezier(.175, .885, .32, 1.275);
+  color: #999;
+}
+
+
+.navbar-nav > li{
+  padding-left:50px;
+  padding-right:50px;
+}
